[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/16x16 Skeleton 1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Speech_bubble.png" type="Texture" id=3]
[ext_resource path="res://Assets/Dungeons_Font.tres" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Sounds/swing3.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/coin2.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/running.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/player_hit.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sounds/Player_Death.wav" type="AudioStream" id=9]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 328, 64, 41 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 328, 64, 41 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 328, 64, 41 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 328, 64, 41 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 15.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "Attack",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 4.31806, 1.13493 )

[sub_resource type="DynamicFont" id=12]
size = 80
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
size = 80
font_data = ExtResource( 4 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Animation" type="AnimatedSprite" parent="."]
position = Vector2( 0, -22 )
frames = SubResource( 10 )
animation = "Idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 38.6739, -43.2252 )
scale = Vector2( 0.0114049, 0.0114049 )
z_index = 5
texture = ExtResource( 3 )

[node name="Lives" type="Label" parent="Sprite"]
margin_left = -3351.8
margin_top = -248.282
margin_right = -3311.8
margin_bottom = -234.282
rect_scale = Vector2( 10, 10 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NULL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Sprite"]
margin_left = -3310.42
margin_top = -1944.87
margin_right = -3270.42
margin_bottom = -1930.87
rect_scale = Vector2( 10, 10 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NULL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="Sprite" parent="."]
visible = false
position = Vector2( 38.6739, -43.2252 )
scale = Vector2( 0.0114049, 0.0114049 )
z_index = 5
texture = ExtResource( 3 )

[node name="Help!" type="Label" parent="Help"]
margin_left = -3001.07
margin_top = -2001.91
margin_right = -2377.07
margin_bottom = -1719.91
rect_scale = Vector2( 10, 10 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "WASD - Move
Space - Attack
Tab - Info"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Swoosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Tingling" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="Player_Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.481

[node name="Running" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.643
autoplay = true
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="finished" from="Running" to="." method="_on_Running_finished"]
